Mình xoá link facebook.com trước thêm vào để ví dụ

--- a/giaodien/index.html
+++ b/giaodien/index.html
@@ -46,7 +46,7 @@
             <ul class="sub-menu">
                 <li><a href="">Bàn phím</a>
                     <ul>
-                        <li><a href="https://facebook.com">Bàn phím có dây</a></li>
+                        <li><a href="">Bàn phím có dây</a></li>
                         <li><a href="">Bàn phím không dây</a></li>
                     </ul>
                 </li>
@@ -70,7 +70,7 @@
             <ul class="sub-menu">
                 <li><a href="">A</a>
                     <ul>
-                        <li><a href="https://facebook.com">1</a></li>
+                        <li><a href="">1</a></li>
                         <li><a href="">2</a></li>
                         <li><a href="">3</a></li>
                         <li><a href="">4</a></li>
@@ -92,7 +92,7 @@
             <ul class="sub-menu">
                 <li><a href="">A</a>
                     <ul>
-                        <li><a href="https://facebook.com">1</a></li>
+                        <li><a href="">1</a></li>
                         <li><a href="">2</a></li>
                         <li><a href="">3</a></li>
                         <li><a href="">4</a></li>
