Thêm phụ kiện dán màn hình

--- a/giaodien/index.html
+++ b/giaodien/index.html
@@ -40,6 +40,12 @@
                         <li><a href="">Sạc dự phòng</a></li>
                     </ul>
                 </li>
+                <li><a href="">Dán màn hình</a>
+                    <ul>
+                        <li><a href="">Miếng dán nhựa</a></li>
+                        <li><a href="">Kính cường lực</a></li>
+                    </ul>
+                </li>
             </ul>
         </li>
         <li><a href="">PHỤ KIỆN MÁY TÍNH</a>
