Sửa Phụ kiện máy ảnh thành Phụ kiện âm thanh

--- a/giaodien/index.html
+++ b/giaodien/index.html
@@ -72,24 +72,23 @@
                 </li>
             </ul>
         </li>
-        <li><a href="">PHỤ KIỆN MÁY ẢNH</a>
+        <li><a href="">PHỤ KIỆN ÂM THANH</a>
             <ul class="sub-menu">
-                <li><a href="">A</a>
+                <li><a href="">Tai Nghe</a>
                     <ul>
-                        <li><a href="">1</a></li>
-                        <li><a href="">2</a></li>
-                        <li><a href="">3</a></li>
-                        <li><a href="">4</a></li>
-                        <li><a href="">5</a></li>
+                        <li><a href="">Tai nghe có dây</a></li>
+                        <li><a href="">Tai nghe Bluetooth</a></li>
+                        <li><a href="">Tai nghe chụp</a></li>
+                        <li><a href="">Tai nghe có micro</a></li>
                     </ul>
                 </li>
-                <li><a href="">B</a>
+                <li><a href="">Loa</a>
                     <ul>
-                        <li><a href="">1</a></li>
-                        <li><a href="">2</a></li>
-                        <li><a href="">3</a></li>
-                        <li><a href="">4</a></li>
-                        <li><a href="">5</a></li>
+                        <li><a href="">Loa để bàn</a></li>
+                        <li><a href="">Loa di động</a></li>
+                        <li><a href="">Loa mini</a></li>
+                        <li><a href="">Loa Bluetooth</a></li>
+                        <li><a href="">Loa Karaoke</a></li>
                     </ul>
                 </li>
             </ul>
