Một số phụ kiện khác

--- a/giaodien/index.html
+++ b/giaodien/index.html
@@ -95,13 +95,12 @@
         </li>
         <li><a href="">PHỤ KIỆN KHÁC</a>
             <ul class="sub-menu">
-                <li><a href="">A</a>
+                <li><a href="">Giá đỡ</a>
                     <ul>
-                        <li><a href="">1</a></li>
-                        <li><a href="">2</a></li>
-                        <li><a href="">3</a></li>
-                        <li><a href="">4</a></li>
-                        <li><a href="">5</a></li>
+                        <li><a href="">Kẹp/Giá đỡ điện thoại</a></li>
+                        <li><a href="">Gậy chụp ảnh</a></li>
+                        <li><a href="">Giá đỡ laptop</a></li>
+                        <li><a href="">Kệ/Giá đỡ màn hình PC</a></li>
                     </ul>
                 </li>
                 <li><a href="">B</a>
