--- a/giaodien/index.html
+++ b/giaodien/index.html
@@ -18,6 +18,7 @@
 
         <!-- <input class="fs-stxt" type="text" id="key" name="" placeholder="Nhập tên điện thoại, máy tính, phụ kiện... cần tìm" autocomplete="off" maxlength="50"> -->
     </header>
+<!--  menu    -->
     <div class="menu">
         <li><a href="">PHỤ KIỆN ĐIỆN THOẠI</a>
             <ul class="sub-menu">
