Bổ sung một số phụ kiện khác

--- a/giaodien/index.html
+++ b/giaodien/index.html
@@ -16,7 +16,6 @@
             <li><input placeholder="Nhập tên phụ kiện điện thoại, máy tính,... bạn cần tìm" type="text"></li>
         </div>
 
-        <!-- <input class="fs-stxt" type="text" id="key" name="" placeholder="Nhập tên điện thoại, máy tính, phụ kiện... cần tìm" autocomplete="off" maxlength="50"> -->
     </header>
 <!--  menu    -->
     <div class="menu">
@@ -112,13 +111,19 @@
                         <li><a href="">Kệ/Giá đỡ màn hình PC</a></li>
                     </ul>
                 </li>
-                <li><a href="">B</a>
+                <li><a href="">Bộ nhớ</a>
                     <ul>
-                        <li><a href="">1</a></li>
-                        <li><a href="">2</a></li>
-                        <li><a href="">3</a></li>
-                        <li><a href="">4</a></li>
-                        <li><a href="">5</a></li>
+                        <li><a href="">USB/Thẻ nhớ</a></li>
+                        <li><a href="">Đầu đọc thẻ nhớ</a></li>
+                        <li><a href="">Ổ cứng HDD</a></li>
+                        <li><a href="">Ổ cứng SSD</a></li>
+                    </ul>
+                </li>
+                <li><a href="">Cáp chuyển đổi</a>
+                    <ul>
+                        <li><a href="">Cáp HDMI</a></li>
+                        <li><a href="">Cáp VGA</a></li>
+                        <li><a href="">Cáp khác</a></li>
                     </ul>
                 </li>
             </ul>
