Bổ sung Micro vào Phụ kiện âm thanh

--- a/giaodien/index.html
+++ b/giaodien/index.html
@@ -91,6 +91,14 @@
                         <li><a href="">Loa Karaoke</a></li>
                     </ul>
                 </li>
+                <li><a href="">Micro</a>
+                    <ul>
+                        <li><a href="">Micro có dây</a></li>
+                        <li><a href="">Micro không dây</a></li>
+                        <li><a href="">Micro cho tai nghe</a></li>
+                        <li><a href="">Micro có loa</a></li>
+                    </ul>
+                </li>
             </ul>
         </li>
         <li><a href="">PHỤ KIỆN ÁNH SÁNG</a>
