--- a/giaodien/index.html
+++ b/giaodien/index.html
@@ -40,10 +40,14 @@
                         <li><a href="">Sạc dự phòng</a></li>
                     </ul>
                 </li>
-                <li><a href="">Dán màn hình</a>
+                <li><a href="">Khác</a>
                     <ul>
-                        <li><a href="">Miếng dán nhựa</a></li>
+                        <li><a href="">Thẻ nhớ</a></li>
+                        <li><a href="">Que chọc sim</a></li>
+                        <li><a href="">Miếng dán màn hình</a></li>
                         <li><a href="">Kính cường lực</a></li>
+                        <li><a href="">Kẹp/Giá đỡ điện thoại</a></li>
+                        <li><a href="">Gậy chụp ảnh</a></li>
                     </ul>
                 </li>
             </ul>
@@ -68,6 +72,21 @@
                     <ul>
                         <li><a href="">Lót chuột thường</a></li>
                         <li><a href="">Lót chuột có đèn led</a></li>
+                    </ul>
+                </li>
+                <li><a href="">Bộ nhớ</a>
+                    <ul>
+                        <li><a href="">USB/Thẻ nhớ</a></li>
+                        <li><a href="">Đầu đọc thẻ nhớ</a></li>
+                        <li><a href="">Ổ cứng HDD</a></li>
+                        <li><a href="">Ổ cứng SSD</a></li>
+                    </ul>
+                </li>
+                <li><a href="">Khác</a>
+                    <ul>
+                        <li><a href="">Giá đỡ laptop</a></li>
+                        <li><a href="">Kệ/Giá đỡ màn hình PC</a></li>
+                        <li><a href="">Webcam</a></li>
                     </ul>
                 </li>
             </ul>
@@ -101,30 +120,15 @@
                 </li>
             </ul>
         </li>
-        <li><a href="">PHỤ KIỆN ÁNH SÁNG</a>
-            <ul class="sub-menu">
-                <li><a href="">Đèn học</a></li>
-                <li><a href="">Đèn màn hình</a></li>
-                <li><a href="">Đèn trang trí</a></li>
-                <li><a href="">Đèn ngủ</a></li>
-            </ul>
-        </li>
         <li><a href="">PHỤ KIỆN KHÁC</a>
             <ul class="sub-menu">
-                <li><a href="">Giá đỡ</a>
+                <li><a href="">Đèn</a>
                     <ul>
-                        <li><a href="">Kẹp/Giá đỡ điện thoại</a></li>
-                        <li><a href="">Gậy chụp ảnh</a></li>
-                        <li><a href="">Giá đỡ laptop</a></li>
-                        <li><a href="">Kệ/Giá đỡ màn hình PC</a></li>
-                    </ul>
-                </li>
-                <li><a href="">Bộ nhớ</a>
-                    <ul>
-                        <li><a href="">USB/Thẻ nhớ</a></li>
-                        <li><a href="">Đầu đọc thẻ nhớ</a></li>
-                        <li><a href="">Ổ cứng HDD</a></li>
-                        <li><a href="">Ổ cứng SSD</a></li>
+                        <li><a href="">Đèn học</a></li>
+                        <li><a href="">Đèn màn hình</a></li>
+                        <li><a href="">Đèn theo nhạc</a></li>
+                        <li><a href="">Đèn trang trí</a></li>
+                        <li><a href="">Đèn ngủ</a></li>
                     </ul>
                 </li>
                 <li><a href="">Cáp chuyển đổi</a>
