--- a/giaodien/index.html
+++ b/giaodien/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/logo.png">
+            <img id="logo" src="images/logo.png">
         </div>
 
         <div class="others">
