Thêm text vào button giỏ hàng và tài khoản

--- a/web/index.html
+++ b/web/index.html
@@ -17,8 +17,18 @@
         </div>
 
         <div class="other">
-            <li><img id="ic-giohang" src="images/icon-giohang.png"></li>
-            <li><img id="ic-acount" src="images/icon-acount.png"></li>
+            <button class="button" type="submit" style="background-color:transparent; border-color:transparent;"> 
+                <img src="images/icon-giohang.png" height="35"/>
+                <span id="button-text">
+                    <br>Giỏ hàng
+                </span>
+            </button>
+            <button class="button" type="submit" style="background-color:transparent; border-color:transparent;"> 
+                <img src="images/icon-acount.png" height="35"/>
+                <span id="button-text">
+                    <br>Tài khoản
+                </span>
+            </button>
         </div>
     </header>
 <!--  menu    -->
