Thêm sub-menu Thiết bị mạng trong Phụ kiện khác

--- a/web/index.html
+++ b/web/index.html
@@ -152,6 +152,12 @@
                         <li><a href="">Cáp khác</a></li>
                     </ul>
                 </li>
+                <li><a href="">Thiết bị mạng</a>
+                    <ul>
+                        <li><a href="">Bộ phát Wifi di động</a></li>
+                        <li><a href="">Router Wifi</a></li>
+                    </ul>
+                </li>
             </ul>
         </li>
     </div>
