Thêm phụ kiện khác

--- a/web/index.html
+++ b/web/index.html
@@ -158,6 +158,7 @@
                         <li><a href="">Router Wifi</a></li>
                     </ul>
                 </li>
+                <li><a href="">Quạt tản nhiệt</a>
             </ul>
         </li>
     </div>
